@@ -6,6 +6,7 @@ v 8.12.7
   - Use gitlab-markup gem instead of github-markup to fix `.rst` file rendering. !6659
   - Prevent flash alert text from being obscured when container is fluid. !6694
   - Fix JS bug with select2 because of missing `data-field` attribute in select box. !6812
+  - Do not alter 'force_remove_source_branch' options on MergeRequest unless specified. !6817
 
 v 8.12.6
   - Update mailroom to 0.8.1 in Gemfile.lock  !6814
